--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "MIT",
   "dependencies": {
     "@discordjs/rest": "^2.4.2",
-    "@steamsets/client-ts": "^0.17.1",
+    "@steamsets/client-ts": "^0.18.0",
+    "canvas": "^3.1.0",
     "consola": "^3.4.0",
     "discord-api-types": "^0.37.119",
     "discord.js": "^14.17.3",
